src/objects/c2g__codaMatchingReference__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpmatchingreference</customHelpPage>
    <description>An internal object that provides an automatically incrementing number for the cash matching and undo matching reference.</description>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__Operation__c</fullName>
        <label>Operation</label>
        <picklist>
            <picklistValues>
                <fullName>Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel Payments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Matching References</relationshipLabel>
        <relationshipName>MatchingReferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Number</label>
        <referenceTo>c2g__codaPayment__c</referenceTo>
        <relationshipLabel>Matching References</relationshipLabel>
        <relationshipName>MatchingReferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Matching Reference</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_codaMatchingReference</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_codaMatchingReference</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_codaMatchingReference</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Matching Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matching References</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>